tests/NormalTests/paczka1/fuzzy1/60309973.err
Error in line 2: EDHuhGgcnZA S293 22,5
Error in line 11: EDHuhGgcnZA S254 24,6
Error in line 29: EDHuhGgcnZA A996 87,5
Error in line 35: V2KnLn A996 50,82
Error in line 32: V2KnLn A996 33,0
Error in line 24: yOlT S293 42,7
